--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,7 @@
 version: '3.7'
 
 services:
-  app:
-    build: .
-    ports:
-      - "3333:3333"
-    environment:
-      - DATABASE_URL=postgresql://docker:docker@db:5432/example?schema=public
-    depends_on:
-      - db
-  db:
+  postgres:
     image: bitnami/postgresql:latest
     ports:
       - '5432:5432'
